# slack-notifier-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
slack_mcp/: __init__.py  server.py  slack_client.py
slack_mcp/tools/: messaging.py
tests/: __init__.py  test_server.py
