[project]
name = "slack-notifier-mcp"
version = "0.2.0"
description = "MCP server for Slack notifications with bidirectional communication"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Oded Falik" }]
keywords = ["mcp", "slack", "notifications", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0,<3",
    "slack-sdk>=3.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
slack-notifier-mcp = "slack_mcp.server:main"

[project.urls]
Homepage = "https://github.com/strand-ai/slack-notifier-mcp"
Repository = "https://github.com/strand-ai/slack-notifier-mcp"
Issues = "https://github.com/strand-ai/slack-notifier-mcp/issues"
Changelog = "https://github.com/strand-ai/slack-notifier-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slack_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
